<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp36"
        android:text="@string/welcome_text"
        android:textColor="@color/black"
        android:textSize="@dimen/sp24"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hi_there_nice_to_see_you_text"
        android:textColor="@color/black"
        android:textSize="@dimen/sp16"
        android:layout_centerInParent="true"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/listButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_drawable"
        android:text="@string/list_text"
        android:textColor="@color/white"
        android:layout_margin="@dimen/dp36"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>